--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -1615,13 +1615,15 @@ log.report.dir = ${dspace.dir}/log
 #        "metadata.dc.contributor.*" or "metadata.default.dc.contributor.*"
 #        "metadata.dc.date.issued" or "metadata.default.dc.date.issued"
 #
-#webui.itemdisplay.default = dc.title, dc.title.alternative, dc.contributor.*, \
-#                            dc.subject(nobreakline), dc.date.issued(date), dc.publisher, \
-#                            dc.identifier.citation, dc.relation.ispartofseries, \
-#                            dc.description.abstract, dc.description, \
-#                            dc.identifier.govdoc, dc.identifier.uri(link), \
-#                            dc.identifier.isbn, dc.identifier.issn, \
-#                            dc.identifier.ismn, dc.identifier
+# CHANGE
+
+webui.itemdisplay.default = dc.title, dc.title.alternative, dc.contributor.*, \
+                            dc.subject(nobreakline), dc.date.issued(date), dc.publisher, \
+                            dc.identifier.citation, dc.relation.ispartofseries, \
+                            dc.description.abstract, dc.description, \
+                            dc.identifier.govdoc, dc.identifier.uri(link), \
+                            dc.identifier.isbn, dc.identifier.issn, \
+                            dc.identifier.ismn, dc.identifier, local.test(special)
 #
 # When using "resolver" in webui.itemdisplay to render identifiers as resolvable
 # links, the base URL is taken from <code>webui.resolver.<n>.baseurl</code>
